* g++.old-deja/g++.abi/ptrmem.C: Lowest bit is significant on SH5. * g++.old-deja/g++.jason/thunk3.C: XFAIL on sh64-*-*.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49629 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-09  Alexandre Oliva  <aoliva@redhat.com>
+
+	* g++.old-deja/g++.abi/ptrmem.C: Lowest bit is significant on SH5.
+	* g++.old-deja/g++.jason/thunk3.C: XFAIL on sh64-*-*.
+
 2002-02-08  Richard Henderson  <rth@redhat.com>
 
 	* gcc.c-torture/compile/labels-3.c: New.
