--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2002-02-09  Alexandre Oliva  <aoliva@redhat.com>
 
+	* config/sh/sh.c (expand_prologue): Fix mis-applied 2001-11-09's
+	patch.
+	
 	Contribute sh64-elf.
 	2002-02-09  Alexandre Oliva  <aoliva@redhat.com>
 	* config/sh/sh.c (TARGET_CANNOT_MODIFY_JUMPS_P): Define to...
