--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -1132,9 +1132,9 @@
 }")
 
 (define_expand "iorhi3"
-  [(set (match_operand:HI 0 "general_operand" "")
-	(ior:HI (match_operand:HI 1 "general_operand" "")
-		(match_operand:HI 2 "general_operand" "")))]
+  [(set (match_operand:HI 0 "register_operand" "")
+	(ior:HI (match_operand:HI 1 "register_operand" "")
+		(match_operand:HI 2 "nonmemory_operand" "")))]
   ""
   "")
 
