2002-02-09  Toon Moene  <toon@moene.indiv.nluug.nl>
	* invoke.texi: Add a short debugging session
	as an example to the documentation of -g.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49636 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-09  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* invoke.texi: Add a short debugging session
+	as an example to the documentation of -g.
+
 2002-02-06  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	PR fortran/4730 fortran/5473
