* config/h8300/h8300.md (length): Correct the distance valid 	for the short branch.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49637 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -67,10 +67,10 @@
 
 (define_attr "length" ""
   (cond [(eq_attr "type" "branch")
-	 (if_then_else (and (ge (minus (pc) (match_dup 0))
-				(const_int -120))
-			    (le (minus (pc) (match_dup 0))
-				(const_int 120)))
+	 (if_then_else (and (ge (minus (match_dup 0) (pc))
+				(const_int -126))
+			    (le (minus (match_dup 0) (pc))
+				(const_int 126)))
 		       (const_int 2)
 		       (if_then_else (and (eq_attr "cpu" "h8300h")
 					  (and (ge (minus (pc) (match_dup 0))
