--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-02-09  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300.md (length): Correct the distance valid
+	for the short branch.
+
+2002-02-09  Kazu Hirata  <kazu@hxi.com>
+
 	* config/h8300/h8300.md (iorhi3): Tighten the predicates.
 
 2002-02-09  Alexandre Oliva  <aoliva@redhat.com>
