2002-02-09  Toon Moene  <toon@moene.indiv.nluug.nl>
	* data.c (ffedata_eval_offset_): Convert non-default integer
	constants to default integer kind if necessary.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49646 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,5 +1,10 @@
 2002-02-09  Toon Moene  <toon@moene.indiv.nluug.nl>
 
+	* data.c (ffedata_eval_offset_): Convert non-default integer
+	constants to default integer kind if necessary.
+
+2002-02-09  Toon Moene  <toon@moene.indiv.nlug.nl>
+
 	* invoke.texi: Add a short debugging session
 	as an example to the documentation of -g.
 
