--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-09  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* g77.f-torture/execute/947.f: New regression test
+	for PR fortran/947.
+
 2002-02-09  Alexandre Oliva  <aoliva@redhat.com>
 
 	* g++.old-deja/g++.abi/ptrmem.C: Lowest bit is significant on SH5.
