--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-09  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.c (output_logical_op): Use sub.w to clear
+	a half of an SImode register on H8/300.
+
 Sat Feb  9 18:28:02 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.md (movdi_2): Add missing '!'.
