--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-10  Andreas Tobler  <toa@pop.agri.ch>
+
+	* interpret.cc (continue1) [insn_f2l]: Use PUSHL, not PUSHI.
+
 2002-02-08  Tom Tromey  <tromey@redhat.com>
 
 	* interpret.cc (convert): New function.
