* config/h8300/h8300.md (pushhi1_h8300): Correct the mode 	used. 	(pushhi1): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49656 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -202,8 +202,8 @@
 ;; movhi
 
 (define_expand "pushhi1_h8300"
-  [(set (mem:QI (pre_dec:HI (reg:HI SP_REG)))
-        (match_operand:QI 0 "register_operand" ""))]
+  [(set (mem:HI (pre_dec:HI (reg:HI SP_REG)))
+        (match_operand:HI 0 "register_operand" ""))]
   "TARGET_H8300"
   "")
 
@@ -218,7 +218,7 @@
    (set_attr "cc" "clobber")])
 
 (define_expand "pushhi1"
-  [(use (match_operand:QI 0 "register_operand" ""))]
+  [(use (match_operand:HI 0 "register_operand" ""))]
   ""
   "
 {
