--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-10  Kazu Hirata  <kazu@hxi.com>
+
+	* gcc.dg/20020210-1.c: New.
+
 2002-02-09  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* g77.f-torture/execute/947.f: New regression test
