--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-10  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* lib/libjava.exp (libjava_find_lib): Remove duplicate .la files.
+
 2002-01-05  H.J. Lu <hjl@gnu.org>
 
 	* libjava.jni/jni.exp: Add -I.. for generated header.
