For PR java/5641: 	* libjava.compile/PR5641.xfail: New file. 	* libjava.compile/PR5641.java: New file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49660 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-10  Tom Tromey  <tromey@redhat.com>
+
+	For PR java/5641:
+	* libjava.compile/PR5641.xfail: New file.
+	* libjava.compile/PR5641.java: New file.
+
 2002-02-10  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* lib/libjava.exp (libjava_find_lib): Remove duplicate .la files.
