* config/mmix/t-mmix (MULTILIB_EXTRA_OPTS): Disable.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49661 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-10  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* config/mmix/t-mmix (MULTILIB_EXTRA_OPTS): Disable.
+
 2002-02-10  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.md (pushhi1_h8300): Correct the mode
