PR c++/5624         * tree.c (append_random_chars): Don't abort if main_input_filename         does not exist.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49662 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,11 +1,16 @@
+2002-02-10  Richard Henderson  <rth@redhat.com>
+
+	PR c++/5624
+	* tree.c (append_random_chars): Don't abort if main_input_filename
+	does not exist.
+
 2002-02-10  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* config/mmix/t-mmix (MULTILIB_EXTRA_OPTS): Disable.
 
 2002-02-10  Kazu Hirata  <kazu@hxi.com>
 
-	* config/h8300/h8300.md (pushhi1_h8300): Correct the mode
-	used.
+	* config/h8300/h8300.md (pushhi1_h8300): Correct the mode used.
 	(pushhi1): Likewise.
 
 2002-02-10  John David Anglin  <dave@hiauly1.hia.nrc.ca>
