PR c/5623         * c-typeck.c (incomplete_type_error): Handle flexible array members.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49663 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-02-10  Richard Henderson  <rth@redhat.com>
 
+	PR c/5623
+	* c-typeck.c (incomplete_type_error): Handle flexible array members.
+
+2002-02-10  Richard Henderson  <rth@redhat.com>
+
 	PR c++/5624
 	* tree.c (append_random_chars): Don't abort if main_input_filename
 	does not exist.
