--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-10  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300-protos.h: Remove the prototype for byte_reg.
+	* config/h8300/h8300.c (byte_reg): Make it static.
+
 2002-02-10  Richard Henderson  <rth@redhat.com>
 
 	PR c/5623
