* config/h8300/h8300.c (print_operand): Remove redundant code.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49666 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-02-10  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300.c (print_operand): Remove redundant code.
+
+2002-02-10  Kazu Hirata  <kazu@hxi.com>
+
 	* config/h8300/h8300-protos.h: Remove the prototype for byte_reg.
 	* config/h8300/h8300.c (byte_reg): Make it static.
 
