* config/h8300/h8300.h (STACK_POINTER_REGNUM): Use the 	constant definition from h8300.md. 	(FRAME_POINTER_REGNUM): Likewise. 	* config/h8300/h8300.md (define_constants): Add FP_REG.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49667 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -51,7 +51,8 @@
 ;; ----------------------------------------------------------------------
 
 (define_constants
-  [(SP_REG	7)])
+  [(FP_REG	6)
+   (SP_REG	7)])
 
 ;; ----------------------------------------------------------------------
 ;; ATTRIBUTES
