* config/h8300/h8300.h (INITIALIZE_TRAMPOLINE): Simplify by 	using Pmode.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49668 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-02-10  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300.h (INITIALIZE_TRAMPOLINE): Simplify by
+	using Pmode.
+
+2002-02-10  Kazu Hirata  <kazu@hxi.com>
+
 	* config/h8300/h8300.h (STACK_POINTER_REGNUM): Use the
 	constant definition from h8300.md.
 	(FRAME_POINTER_REGNUM): Likewise.
