--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-11  Alexandre Oliva  <aoliva@redhat.com>
+
+	* combine.c (try_combine): Apply substitutions in
+	CALL_INSN_FUNCTION_USAGE too.
+
 2002-02-11  Aldy Hernandez  <aldyh@redhat.com>
 
         * config/rs6000/rs6000.c (altivec_init_builtins): Handle
