--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2002-02-11  Alexandre Oliva  <aoliva@redhat.com>
 
+	* config/sh/sh.h (FUNCTION_ARG_REGNO_P): Fix parenthesizing error.
+
 	* combine.c (try_combine): Apply substitutions in
 	CALL_INSN_FUNCTION_USAGE too.
 
