--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2002-02-11  Alexandre Oliva  <aoliva@redhat.com>
 
+	* calls.c (store_one_arg): In the non-BLKmode non-partial case,
+	take padding into account when computing the argument value.
+
 	* config/sh/sh.h (FUNCTION_ARG_REGNO_P): Fix parenthesizing error.
 
 	* combine.c (try_combine): Apply substitutions in
