2002-02-11  Andrew Haley  <aph@cambridge.redhat.com>
        * config/stormy16/stormy16.md (zero_extendqihi2): New.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49679 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-11  Andrew Haley  <aph@cambridge.redhat.com>
+
+	* config/stormy16/stormy16.md (zero_extendqihi2): New.
+
 2002-02-11  Alexandre Oliva  <aoliva@redhat.com>
 
 	* regrename.c (regrename_optimize): Don't accept a
