--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-11  Zack Weinberg  <zack@codesourcery.com>
+
+	* gcc.pot: Regenerate.
+
 2002-02-04  Zack Weinberg  <zack@codesourcery.com>
 
 	* gcc.pot: Regenerate.
