--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-02-11  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* gcc.c (init_gcc_specs): Add static libgcc to link when "-shared"
+	is specified.
+	* config/pa/pa-linux.h (LIB_SPEC): Delete.
+	* config/pa/pa32-linux.h (LINK_COMMAND_SPEC): Delete.
+
 2002-02-11  Andrew Haley  <aph@cambridge.redhat.com>
 
 	* config/stormy16/stormy16.md (zero_extendqihi2): New.
