2002-02-11  Adam Megacz <adam@xwt.org>
    * exception.cc (_Jv_Throw, PERSONALITY_FUNCTION): Changed
    std::abort() to simply abort(). Also added "fake" std::abort() so
    we can #include unwind-pe.h without having to link against
    libstdc++-v3.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49685 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2002-02-11  Adam Megacz <adam@xwt.org>
+
+	* exception.cc (_Jv_Throw, PERSONALITY_FUNCTION): Changed
+	std::abort() to simply abort(). Also added "fake" std::abort() so
+	we can #include unwind-pe.h without having to link against
+	libstdc++-v3.
+
 2002-02-10  Andreas Tobler  <toa@pop.agri.ch>
 
 	* interpret.cc (continue1) [insn_f2l]: Use PUSHL, not PUSHI.
