--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-12  David Billinghurst <Davod.Billinghurst@riotinto.com>
+
+	* class.c(build_utf8_ref): Move declaration of decl_size
+
 2002-02-07  Tom Tromey  <tromey@redhat.com>
 
 	* gcj.texi (Input Options): --CLASSPATH does not suppress system
