--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,11 @@
 2002-02-11  Adam Megacz <adam@xwt.org>
 
+	* java/io/natFileWin32.cc, java/io/natFileDescriptorWin32.cc:
+	Added #undef STRICT to make windows.h and
+	java/lang/reflect/Modifier.h cooperate.
+
+2002-02-11  Adam Megacz <adam@xwt.org>
+
 	* java/io/natFileWin32.cc: Created a placeholder class with lots
 	of FIXMEs.
 
