--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-12  David Billinghurst <David.Billinghurst@riotinto.com>
+
+	* gcc.dg/c99-flex-array-2.c: Add -std=iso9899:1999 
+
 2002-02-10  Kazu Hirata  <kazu@hxi.com>
 
 	* gcc.c-torture/compile/961203-1.x: Disable on h8300 port.
