2002-02-12  Adam Megacz <adam@xwt.org>
    * java/io/natFilePosix.cc: Copied this from natFile.cc.
    * java/io/natFile.cc: Removed from repository.
    * configure.in: Added AC_LINK_FILES for natFile${PLATFORM}.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49700 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,11 @@
 2002-02-12  Adam Megacz <adam@xwt.org>
 
+        * java/io/natFilePosix.cc: Copied this from natFile.cc.
+	* java/io/natFile.cc: Removed from repository.
+	* configure.in: Added AC_LINK_FILES for natFile${PLATFORM}.
+
+2002-02-12  Adam Megacz <adam@xwt.org>
+
 	* win32.cc: Added two #includes to make win32.cc compile.
 
 2002-02-12  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
