--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,10 @@
 2002-02-12  Adam Megacz <adam@xwt.org>
 
+        * java/lang/Win32Process.java: Filled in a placeholder
+	implementation so Win32 will build.
+
+2002-02-12  Adam Megacz <adam@xwt.org>
+
         * java/io/natFilePosix.cc: Copied this from natFile.cc.
 	* java/io/natFile.cc: Removed from repository.
 	* configure.in: Added AC_LINK_FILES for natFile${PLATFORM}.
