--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-12  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* gcc.dg/decl-1.c: New test.
+
 2002-02-12  David Billinghurst <David.Billinghurst@riotinto.com>
 
 	* gcc.dg/c99-flex-array-2.c: Add -std=iso9899:1999 
