--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-12  Graham Stott  <grahams@redhat.com>
+
+	* config/pa/pa.c (compute_movstrsi_length): Fix typos.
+
 Tue Feb 12 10:12:56 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* alias.c (find_base_value, case ZERO_EXTEND, case SIGN_EXTEND):
