--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-02-12  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.c (shift_alg_hi): Improve the 15-bit
+	logical shifts on H8/300.
+	(shift_alg_si): Improve several shifts on H8/300.
+	(get_shift_alg): Likewise.
+
 2002-02-12  Graham Stott  <grahams@redhat.com>
 
 	* config/pa/pa.c (compute_movstrsi_length): Fix typos.
