--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/Wunreachable-1.c: New test.
+	* gcc.dg/Wunreachable-2.c: New test.
+
 2002-02-12  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/c90-const-expr-3.c, gcc.dg/c99-const-expr-3.c: New tests.
