* c-typeck.c (digest_init): Handle vectors.         (really_start_incremental_init): Same.         (pop_init_level): Same.         (process_init_element): Same.
        * varasm.c (output_constant): Same.

        * expr.c (clear_storage): Same.
        (store_constructor): Same.

        * gcc.dg/altivec-3.c: New.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49715 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2002-02-13  Stan Shebs  <shebs@apple.com>
+
+        * c-typeck.c (digest_init): Handle vectors.
+        (really_start_incremental_init): Same.
+        (pop_init_level): Same.
+        (process_init_element): Same.
+
+        * varasm.c (output_constant): Same.
+
+        * expr.c (clear_storage): Same.
+        (store_constructor): Same.
+
 2002-02-12  Eric Christopher  <echristo@redhat.com>
 
 	* explow.c (hard_function_value): Add comment explaining
