2002-02-12  David Billinghurst <David.Billinghurst@riotinto.com>
	* g++.dg/warn/weak1.C: weak attributes not supported on cygwin


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49716 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-12  David Billinghurst <David.Billinghurst@riotinto.com>
+
+	* g++.dg/warn/weak1.C: weak attributes not supported on cygwin
+
 2002-02-13  Stan Shebs  <shebs@apple.com>
 
         * gcc.dg/altivec-3.c: New.
