* exception.cc (std::abort): Mark as noreturn.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49717 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-12  Tom Tromey  <tromey@redhat.com>
+
+	* exception.cc (std::abort): Mark as noreturn.
+
 2002-02-12  Adam Megacz <adam@xwt.org>
 
         * java/lang/Win32Process.java: Filled in a placeholder
