--- a/cfg-branch/gcc/ChangeLog
+++ b/cfg-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Wed Feb 13 11:03:15 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* flow.c (update_life_info): Call clear_log_links once blocks
+	are computed.
+
 Sat Feb  9 18:28:02 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.md (movdi_2): Add missing '!'.
