* typeck2.c (digest_init, process_init_constructor): Treat vectors         like arrays.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49726 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-13  Jason Merrill  <jason@redhat.com>
+
+	* typeck2.c (digest_init, process_init_constructor): Treat vectors
+	like arrays.
+
 2002-02-11  Jason Merrill  <jason@redhat.com>
 
 	* parse.y (reserved_declspecs): Don't handle attributes.
