--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-13  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.md (subqi3): Tighten the predicate for
+	operands[2] to register_operand.
+
 Wed Feb 13 10:35:56 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.md (fop_*_comm_*): allow nonimmediate in the first operand.
