--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -765,13 +765,11 @@
 ;; ----------------------------------------------------------------------
 
 (define_insn "subqi3"
-  [(set (match_operand:QI 0 "register_operand" "=r,r")
-	(minus:QI (match_operand:QI 1 "register_operand" "0,0")
-		  (match_operand:QI 2 "nonmemory_operand" "r,n")))]
+  [(set (match_operand:QI 0 "register_operand" "=r")
+	(minus:QI (match_operand:QI 1 "register_operand" "0")
+		  (match_operand:QI 2 "register_operand" "r")))]
   ""
-  "@
-   sub.b	%X2,%X0
-   add.b	%G2,%X0"
+  "sub.b	%X2,%X0"
   [(set_attr "length" "2")
    (set_attr "cc" "set_zn")])
 
