--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-02-13  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300.c (h8300_adjust_insn_length): Correct the
+	length computation of movsi.
+	* config/h8300/h8300.md (movsi_h8300hs): Correct the length.
+
+2002-02-13  Kazu Hirata  <kazu@hxi.com>
+
 	* config/h8300/h8300.md (subqi3): Tighten the predicate for
 	operands[2] to register_operand.
 
